# CrowdSegmenter-TGCE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml
configs/training/annotharmony/: oxfordiiitpet.yaml
configs/training/crowdseg/: oxfordiiitpet.yaml
scripts/: noisy_label_optimization.py  tgce_ssps_optimization.py  train_annotharmony.py  train_cli.py  train_crowdseg.py
src/: config.py
src/crowdsegmenter/: __init__.py  config.py
src/crowdsegmenter/data/: __init__.py  annotharmony_data.py  crowdseg_data.py  loader.py
src/crowdsegmenter/evaluation/: __init__.py
src/crowdsegmenter/losses/: __init__.py  noisy_label.py  tgce_ssps.py
src/crowdsegmenter/metrics/: __init__.py  segmentation.py
src/crowdsegmenter/models/: __init__.py  annot_harmony.py  crowdseg.py
src/crowdsegmenter/training/: __init__.py  annotharmony_trainer.py  noisy_label_tuner.py  tgce_ssps_tuner.py  trainer.py
src/crowdsegmenter/utils/: __init__.py  formatter.py  metrics.py  reproducibility.py  train_phases.py
src/losses/: tgce_ssps.py
src/training/: engine.py
tests/: test_config.py  test_formatter.py  test_losses.py  test_tgce_ssps.py  test_tgce_ssps_tuner.py
