[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdsegmenter-tgce"
version = "0.1.0"
description = "Multi-Agent Swarm for PhD-level Deep Learning Research comparing TGCE_SSPS against Majority Voting, STAPLE, and CrowdSeg"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Research Developer" }
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "SimpleITK>=2.3.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v -ra"

[tool.setuptools.packages.find]
where = ["src"]
